--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-router-with-query": "^1.102.5",
     "@tanstack/router-devtools": "^1.102.5",
     "@tanstack/start": "^1.102.6",
+    "@tanstack/zod-adapter": "^1.109.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
