--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.1",
+    "google-auth-library": "^9.15.1",
+    "google-spreadsheet": "^4.1.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.473.0",
     "lz-string": "^1.5.0",
@@ -80,6 +82,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@tanstack/eslint-plugin-router": "^1.92.7",
+    "@types/google-spreadsheet": "^4.0.0",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
