--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "app/utils/add-to-sheet.js"],
   "compilerOptions": {
     "strict": true,
     "esModuleInterop": true,
